--- a/app/components/news.html
+++ b/app/components/news.html
@@ -1,19 +1,21 @@
 <section class="news">
   <div class="container">
     <div class="news__header">
-      <h2 class="title news__title">НАШИ НОВОСТИ</h2>
+      <h2 class="title news__title">наши новости</h2>
       <a class="news__header-link" href="#">все новости</a>
     </div>
     
     <ul class="news__items">
       <li class="news__item">
         <article class="news__box">
-          <a class="news__img-box" href="#">
+          <a class="news__link" href="#">
             <div class="news__date">
               июль
               <span class="news__num">15</span>
             </div>
-            <img class="news__img" src="images/news/1.jpg" alt="">
+            <div class="news__img-box">
+              <img class="news__img" src="images/news/1.jpg" alt="Событие этого лета">
+            </div>
           </a>
           <h3 class="news__text">
             Событие этого лета: распродажа сезонных фруктов в онлайн-маркете ФрешОК. Торопись, пока всё не
@@ -21,28 +23,35 @@
           </h3>
         </article>
       </li>
+
       <li class="news__item">
         <article class="news__box">
-          <a class="news__img-box" href="#">
+          <a class="news__link" href="#">
             <div class="news__date">
               май
               <span class="news__num">07</span>
             </div>
-            <img class="news__img" src="images/news/2.jpg" alt="">
+            <div class="news__img-box">
+             
+              <img class="news__img" src="https://shop-cdn1.vigbo.tech/shops/56537/products/11569397/images/3-16463de91eb665bd4982fa80d2b5d5c0.jpeg" alt="Шикарнейший выбор манго">
+            </div>
           </a>
           <h3 class="news__text">
             Шикарнейший выбор манго в нашем онлайн-маркете
           </h3>
         </article>
       </li>
+
       <li class="news__item">
         <article class="news__box">
-          <a class="news__img-box" href="#">
+          <a class="news__link" href="#">
             <div class="news__date">
               февраль
               <span class="news__num">20</span>
             </div>
-            <img class="news__img" src="images/news/3.jpg" alt="">
+            <div class="news__img-box">
+              <img class="news__img" src="images/news/3.jpg" alt="Всё, что вы хотели знать о папайя">
+            </div>
           </a>
           <h3 class="news__text">
             Всё, что вы хотели знать о папайя
