--- a/app/components/promo.html
+++ b/app/components/promo.html
@@ -3,19 +3,19 @@
     <h2 class="title promo__title">
       акции
     </h2>
-    <ul class="filter promo__filter">
-      <li class="filter__item">
-        <button class="filter__btn" type="button" data-filter="all">
+    <ul class="promo-filter">
+      <li class="promo-filter__item">
+        <button class="promo-filter__btn" type="button" data-filter="all">
           все товары
         </button>
       </li>
-      <li class="filter__item">
-        <button class="filter__btn" type="button" data-filter=".category-new">
+      <li class="promo-filter__item">
+        <button class="promo-filter__btn" type="button" data-filter=".category-new">
           Новинки
         </button>
       </li>
-      <li class="filter__item">
-        <button class="filter__btn" type="button" data-filter=".category-hit">
+      <li class="promo-filter__item">
+        <button class="promo-filter__btn" type="button" data-filter=".category-hit">
           хиты
         </button>
       </li>
@@ -35,8 +35,8 @@
             </span>
             <div class="promo-cards__item">
               <div class="promo-card__price">
-                <span class="promo-cards__promoprice">900 <span>₽</span></span>
-                <span class="promo-cards__oldprice">1999 <span>₽</span></span>
+                <span class="promo-cards__promoprice">900<span class="currency">₽</span></span>
+                <span class="promo-cards__oldprice">1999<span class="currency">₽</span></span>
               </div>
               <span class="promo-cards__star">4.5
                 <svg class="promo-cards__star-img" width="16" height="15">
@@ -63,8 +63,8 @@
             </span>
             <div class="promo-cards__item">
               <div class="promo-card__price">
-                <span class="promo-cards__promoprice">777 <span>₽</span></span>
-                <span class="promo-cards__oldprice">877 <span>₽</span></span>
+                <span class="promo-cards__promoprice">777<span class="currency">₽</span></span>
+                <span class="promo-cards__oldprice">877<span class="currency">₽</span></span>
               </div>
               <span class="promo-cards__star">4.9
                 <svg class="promo-cards__star-img" width="16" height="15">
@@ -90,8 +90,8 @@
             </span>
             <div class="promo-cards__item">
               <div class="promo-card__price">
-                <span class="promo-cards__promoprice">999 <span>₽</span></span>
-                <span class="promo-cards__oldprice">1999 <span>₽</span></span>
+                <span class="promo-cards__promoprice">999<span class="currency">₽</span></span>
+                <span class="promo-cards__oldprice">1999<span class="currency">₽</span></span>
               </div>
               <span class="promo-cards__star">5.0
                 <svg class="promo-cards__star-img" width="16" height="15">
@@ -116,8 +116,8 @@
             </span>
             <div class="promo-cards__item">
               <div class="promo-card__price">
-                <span class="promo-cards__promoprice">660 <span>₽</span></span>
-                <span class="promo-cards__oldprice">960 <span>₽</span></span>
+                <span class="promo-cards__promoprice">660<span class="currency">₽</span></span>
+                <span class="promo-cards__oldprice">960<span class="currency">₽</span></span>
               </div>
               <span class="promo-cards__star">5.0
                 <svg class="promo-cards__star-img" width="16" height="15">
@@ -142,8 +142,8 @@
             </span>
             <div class="promo-cards__item">
               <div class="promo-card__price">
-                <span class="promo-cards__promoprice">999 <span>₽</span></span>
-                <span class="promo-cards__oldprice">1999 <span>₽</span></span>
+                <span class="promo-cards__promoprice">999<span class="currency">₽</span></span>
+                <span class="promo-cards__oldprice">1999<span class="currency">₽</span></span>
               </div>
               <span class="promo-cards__star">4.5
                 <svg class="promo-cards__star-img" width="16" height="15">
@@ -170,8 +170,8 @@
             </span>
             <div class="promo-cards__item">
               <div class="promo-card__price">
-                <span class="promo-cards__promoprice">180 <span>₽</span></span>
-                <span class="promo-cards__oldprice">230 <span>₽</span></span>
+                <span class="promo-cards__promoprice">180<span class="currency">₽</span></span>
+                <span class="promo-cards__oldprice">230<span class="currency">₽</span></span>
               </div>
               <span class="promo-cards__star">4.9
                 <svg class="promo-cards__star-img" width="16" height="15">
@@ -199,10 +199,8 @@
             </span>
             <div class="promo-cards__item">
               <div class="promo-card__price">
-                <span class="promo-cards__promoprice">3990 <span>₽</span></span>
-                <span class="promo-cards__oldprice">5990
-
-                  <span>₽</span></span>
+                <span class="promo-cards__promoprice">3990<span class="currency">₽</span></span>
+                <span class="promo-cards__oldprice">5990<span class="currency">₽</span></span>
               </div>
               <span class="promo-cards__star">4.9
                 <svg class="promo-cards__star-img" width="16" height="15">
@@ -229,10 +227,8 @@
             </span>
             <div class="promo-cards__item">
               <div class="promo-card__price">
-                <span class="promo-cards__promoprice">499 <span>₽</span></span>
-                <span class="promo-cards__oldprice">599
-
-                  <span>₽</span></span>
+                <span class="promo-cards__promoprice">499<span class="currency">₽</span></span>
+                <span class="promo-cards__oldprice">599<span class="currency">₽</span></span>
               </div>
               <span class="promo-cards__star">4.6
                 <svg class="promo-cards__star-img" width="16" height="15">
