--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,5 +1,6 @@
 $green-900: #63a60e;
 $green-800: #4D800C;
+$green-700: #4D810C;
 $green-200: #e0edcf;
 $green-100: #eff6e7;
 $dark : #000;
@@ -11,6 +12,7 @@ $red-900: #cf3e3b;
 $orange-900: #ff7a00;
 $yellow: #ffb800;
 $silver-600: #c1c1c1;
+$silver-500: #c4c4c4;
 $silver-200: #ebebeb;
 $silver-100: #f6f6f6;
 $white: #fff;
