--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -1,20 +1,28 @@
 .footer{
+  padding: 30px 0;
   background-color: $dark-800;
   color: $white;
   &__head {
-    padding: 30px 0;
+    margin-bottom: 30px;
   }
 
   &__body {
-    padding: 0 0 30px;
+    margin-bottom: 30px;
     display: flex;
     justify-content: space-between;
+    @include xl {
+      flex-wrap: wrap;
+      justify-content: space-around;
+    }
+
+    @include lg {
+      flex-direction: column-reverse;
+      align-items: center;
+    }
   }
 
-  &__newsletter  {
-    p {
+  &__text  {
       margin-bottom: 20px;
-    }
   }
 
   &__form {
@@ -39,18 +47,41 @@
     line-height: 1.1;
     border-radius: 0 6px 6px 0;
     padding: 12px;
-    width: 118px;
+    max-width: 118px;
+    width: 100%;
     @include Lato(400);
     color: $white;
   }
 
   &__menu {
-    max-width: 468px;
+    max-width: 536px;
     width: 100%;
+    margin-left: 70px;
+    
+    @include xl {
+      margin: 0 0 30px 30px;
+    }
+
+    @include lg {
+      margin-top: 24px;
+    }
+
+    @include md {
+      max-width: 340px;
+    }
   }
 
   &__box {
-    column-count: 3;
+    columns: 3;
+    column-gap: 80px;
+
+    @include lg {
+      text-align: left;
+    }
+
+    @include md {
+      column-count: 2;
+    }
   }
 
   &__box-item {
@@ -64,19 +95,29 @@
       margin-bottom: 18px;
     }
     
-    &:hover {
+    &:hover,
+    &:active,
+    &:focus {
       opacity: 0.7;
     }
   }
 
+  &__tel {
+    margin-left: 10px;
+    &:hover,
+    &:active,
+    &:focus {
+      opacity: 0.8;
+    }
+  }
+
   &__address {
-    font-style: normal;
     margin: 18px 0;
   }
 
   &__bottom {
     border-top: 1px solid rgba(255, 255, 255, 0.1);
-    padding: 24px 0;
+    padding: 30px 0 0;
   }
 
   &__wrapper {
@@ -92,6 +133,7 @@
   &__payment-img {
     width: 93px;
     height: 29px;
+    fill: $white;
     &:not(:first-child) {
       margin-left: 24px;
       width: 50px;
@@ -101,59 +143,32 @@
   &__span {
     text-transform: uppercase;
   }
-}
 
-.social {
-  display: flex;
-  align-items: center;
-  &__link{
-    margin-right: 12px;
-    transition: opacity 0.3s;
-    &:hover {
-      opacity: 0.7;
-    }
-    &-img{
-      width: 32px;
-      height: 32px;
-    }
-  }
-}
+  &__newsletter  {
 
-@media (max-width: 1200px) {
-  .footer {
-    &__body {
-      flex-wrap: wrap;
-    }
-
-    &__newsletter {
+    @include xl {
       margin-bottom: 30px;
     }
 
-    &__menu {
-      margin-bottom: 30px;
+    @include lg {
+      margin-bottom: 0px;
     }
   }
-}
 
-@media (max-width: 870px) {
-  .footer {
+  &__contacts {
+    @include lg {
+      padding-bottom: 24px;
+    }
+  }
+
+  @include lg {
     text-align: center;
     flex-direction: column;
-    &__body {
-      flex-direction: column;
-      align-items: center;
-    }
 
-    &__box {
-      text-align: left;
-    }
-  }
-}
-
-@media (max-width: 670px) {
-  .footer {
-    &__box {
-      column-count: 2;
+    .social {
+      &--footer {
+        justify-content: center;
+      }
     }
   }
 }
