--- a/app/components/brands.html
+++ b/app/components/brands.html
@@ -1,55 +1,47 @@
 <div class="brands">
   <div class="container">
     <ul class="brands__box">
-      <li class="brands__item">
-        <a class="brands__link" href="#">
-          <svg class="brands-img" width="80px">
-            <use xlink:href="images/sprite.svg#sprite"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="brands__item">
-        <a class="brands__link" href="#">
-          <svg class="brands-img" width="80px">
-            <use xlink:href="images/sprite.svg#dr-pepper"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="brands__item">
-        <a class="brands__link" href="#">
-          <svg class="brands-img" width="80px">
-            <use xlink:href="images/sprite.svg#coca-cola"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="brands__item">
-        <a class="brands__link" href="#">
-          <svg class="brands-img" width="80px">
-            <use xlink:href="images/sprite.svg#pepsi"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="brands__item">
-        <a class="brands__link" href="#">
-          <svg class="brands-img" width="80px">
-            <use xlink:href="images/sprite.svg#redbull"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="brands__item">
-        <a class="brands__link" href="#">
-          <svg class="brands-img" width="80px">
-            <use xlink:href="images/sprite.svg#fanta"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="brands__item">
-        <a class="brands__link" href="#">
-          <svg class="brands-img" width="80px">
-            <use xlink:href="images/sprite.svg#fanta"></use>
-          </svg>
-        </a>
-      </li>
+        <li class="brands__item">
+          <a class="brands__link" href="#">
+            <img class="brands__img" src="images/brands/sprite.png" alt="sprite">
+          </a>
+        </li>
+
+        <li class="brands__item">
+          <a class="brands__link" href="#">
+            <img class="brands__img" src="images/brands/dr-pepper.png" alt="dr-pepper">
+          </a>
+        </li>
+
+        <li class="brands__item">
+          <a class="brands__link" href="#">
+            <img class="brands__img" src="images/brands/cocacola.png" alt="cocacola">
+          </a>
+        </li>
+
+        <li class="brands__item">
+          <a class="brands__link" href="#">
+            <img class="brands__img" src="images/brands/pepsi.png" alt="pepsi">
+          </a>
+        </li>
+
+        <li class="brands__item">
+          <a class="brands__link" href="#">
+            <img class="brands__img" src="images/brands/redbull.png" alt="redbull">
+          </a>
+        </li>
+
+        <li class="brands__item">
+          <a class="brands__link" href="#">
+            <img class="brands__img" src="images/brands/fanta.png" alt="fanta">
+          </a>
+        </li>
+        
+        <li class="brands__item">
+          <a class="brands__link" href="#">
+            <img class="brands__img" src="images/brands/sprite.png" alt="sprite">
+          </a>
+        </li>
     </ul>
   </div>
 </div>
