--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -7,13 +7,17 @@
     </div>
     <div class="footer__body">
       <div class="footer__newsletter">
-        <p class="footer__text">Следите за нашими акциями</p>
+        <div class="footer__text">
+          <p>Следите за нашими акциями</p>
+        </div>
+
         <form class="footer__form">
           <label class="footer__label sr-only" for="email">E-mail</label>
           <input class="footer__input" type="email" id="email" placeholder="email@email.com" required>
           <button class="footer__btn btn" type="submit">подписаться</button>
         </form>
       </div>
+
       <nav class="footer__menu">
         <ul class="footer__box">
           <li class="footer__box-item">
@@ -21,52 +25,57 @@
               О нас
             </a>
           </li>
+
           <li class="footer__box-item">
             <a class="footer__link" href="#">
               Контакты
             </a>
           </li>
+
           <li class="footer__box-item">
             <a class="footer__link" href="#">
               Публичная оферта
             </a>
           </li>
+
           <li class="footer__box-item">
             <a class="footer__link" href="#">
               Оплата и доставка
             </a>
           </li>
+
           <li class="footer__box-item">
             <a class="footer__link" href="#">
               Вакансии
             </a>
           </li>
+
           <li class="footer__box-item">
             <a class="footer__link" href="#">
               Акции
             </a>
-          </li class="footer__box-item">
+          </li>
+
           <li class="footer__box-item">
             <a class="footer__link" href="#">
               Отзывы
             </a>
           </li>
+
           <li class="footer__box-item">
             <a class="footer__link" href="#">
               Новости
             </a>
           </li>
-
-
         </ul>
       </nav>
 
       <div class="footer__contacts">
-        <a class="footer__tel" href="tel:+7907288365">Горячая линия +7 907 288 365</a>
+        <div class="">Горячая линия<a class="footer__tel" href="tel:+7907288365">+7 907 288 365</a></div>
         <address class="footer__address">
           Санкт-Петербург, ул. Ленина, 1
         </address>
-        <ul class="social">
+        <ul class="social social--footer">
           <li class="social__item">
             <a class="social__link" href="#">
               <svg class="social__link-img">
@@ -74,6 +83,7 @@
               </svg>
             </a>
           </li>
+
           <li class="social__item">
             <a class="social__link" href="#">
               <svg class="social__link-img">
@@ -81,6 +91,7 @@
               </svg>
             </a>
           </li>
+          
           <li class="social__item">
             <a class="social__link" href="#">
               <svg class="social__link-img">
@@ -88,6 +99,7 @@
               </svg>
             </a>
           </li>
+
           <li class="social__item">
             <a class="social__link" href="#">
               <svg class="social__link-img">
@@ -96,10 +108,10 @@
             </a>
           </li>
         </ul>
-
       </div>
     </div>
   </div>
+
   <div class="footer__bottom">
     <div class="container">
       <div class="footer__wrapper">
@@ -110,6 +122,7 @@
               <use xlink:href="images/sprite.svg#visa"></use>
             </svg>
           </li>
+          
           <li class="footer__payment-item">
             <svg class="footer__payment-img">
               <use xlink:href="images/sprite.svg#mc"></use>
