--- a/app/components/header.html
+++ b/app/components/header.html
@@ -1,107 +1,9 @@
 <header class="header">
-  <div class="cart">
-    <div class="card__wrapper">
-      <div class="cart__top">
-        <div class="cart__top-wrapper">
-          <h3 class="cart__title">Корзина</h3>
-          <button class="cart__clear">очистить корзину</button>
-        </div>
-        <button class="close close--cart" type="btn">
-          <svg class="close-img" width="24" height="24">
-            <use xlink:href="images/sprite.svg#close"></use>
-          </svg>
-        </button>
-      </div>
-      <ul class="cart__body">
-        <li class="cart-list">
-          <div class="cart-list__item">
-            <div class="cart-list__img-box">
-              <img class="cart-list__img" src="../images/top_product/pineapple.png" alt="Ананас">
-            </div>
-            <div class="cart-list__text-box">
-              <h3 class="cart-list__title">Ананас, 1 кг</h3>
-              <span class="cart-list__price">999 <span>₽</span> </span>
-            </div>
-          </div>
-          <div class="cart-list__box">
-            <button class="cart-list__del" type="button">
-              <svg class="cart__close-img" width="12" height="12">
-                <use xlink:href="images/sprite.svg#close"></use>
-              </svg>
-            </button>
-            <div class="cart-list__footer">
-              <div class="cart-list__counter">
-                <button class="cart-list__btn">
-                  <svg width="12" height="12">
-                    <use xlink:href="images/sprite.svg#minus"></use>
-                  </svg>
-                </button>
-                <span class="cart-list__amount">2</span>
-                <button class="cart-list__btn">
-                  <svg width="12" height="12">
-                    <use xlink:href="images/sprite.svg#plus"></use>
-                  </svg>
-                </button>
-
-              </div>
-              <span class="cart-list__price">
-                1998 <span>₽</span>
-              </span>
-            </div>
-          </div>
-        </li>
-
-        <li class="cart-list">
-          <div class="cart-list__item">
-            <div class="cart-list__img-box">
-              <img class="cart-list__img" src="../images/top_product/dragon.png" alt="Питахайя">
-            </div>
-            <div class="cart-list__text-box">
-              <h3 class="cart-list__title">Питахайя красная с белой мякотью, 1шт</h3>
-              <span class="cart-list__price">1019 <span>₽</span> </span>
-            </div>
-          </div>
-          <div class="cart-list__box">
-            <button class="cart-list__del" type="button">
-              <svg class="cart__close-img" width="12" height="12">
-                <use xlink:href="images/sprite.svg#close"></use>
-              </svg>
-            </button>
-            <div class="cart-list__footer">
-              <div class="cart-list__counter">
-                <button class="cart-list__btn">
-                  <svg width="12" height="12">
-                    <use xlink:href="images/sprite.svg#minus"></use>
-                  </svg>
-                </button>
-                <span class="cart-list__amount">2</span>
-                <button class="cart-list__btn">
-                  <svg width="12" height="12">
-                    <use xlink:href="images/sprite.svg#plus"></use>
-                  </svg>
-                </button>
-
-              </div>
-              <span class="cart-list__price">
-                2038 <span>₽</span>
-              </span>
-            </div>
-          </div>
-        </li>
-      </ul>
-      <div class="cart__bottom">
-        <div class="cart__bottom-wrapper">
-          <span class="cart__bottom-text">Товаров на сумму</span>
-          <span class="cart__sum">2038<span>₽</span></span>
-        </div>
-        <button class="cart__buy">Оформить заказ</button>
-      </div>
-    </div>
-  </div>
+<!--#include virtual="../components/cart.html" -->
   <div class="menu">
     <div class="menu__top">
       <a class="logo" href="#">
-        <img class="logo__img" src="images/sprite/logo.svg" alt="Логотип">
+        <img class="logo__img" src="images/sprite.svg#logo2" alt="Логотип">
       </a>
       <button class="close close--menu" type="btn">
         <svg class="close-img" width="24" height="24">
@@ -124,35 +26,47 @@
         </a>
       </div>
     </div>
+
     <address class="menu__address">
       <div class="menu__container">
-        <a class="menu__link menu__link--tel" href="tel:+7907288365">+7 907 288 365</a>
-        <a class="menu__link menu__link--address" href="#">Санкт-Петербург, ул. Ленина, 1</a>
+        <a class="menu__link menu__link--tel" href="tel:+7907288365">+7 907 288 365
+          <svg class="menu__img menu__img--tel">
+            <use xlink:href="images/sprite.svg#tel"></use>
+          </svg>
+        </a>
+        <a class="menu__link menu__link--address" href="#">Санкт-Петербург, ул. Ленина, 1
+          <svg class="menu__img menu__img--address">
+            <use xlink:href="images/sprite.svg#address"></use>
+          </svg>
+        </a>
         <ul class="social">
           <li class="social__item">
             <a class="social__link" href="#">
-              <svg class="social__link-img">
+              <svg class="social__link-img social__link-img--menu">
                 <use xlink:href="images/sprite.svg#facebook"></use>
               </svg>
             </a>
           </li>
+
           <li class="social__item">
             <a class="social__link" href="#">
-              <svg class="social__link-img">
+              <svg class="social__link-img social__link-img--menu">
                 <use xlink:href="images/sprite.svg#youtube"></use>
               </svg>
             </a>
           </li>
+
           <li class="social__item">
             <a class="social__link" href="#">
-              <svg class="social__link-img">
+              <svg class="social__link-img social__link-img--menu">
                 <use xlink:href="images/sprite.svg#telegram"></use>
               </svg>
             </a>
           </li>
+
           <li class="social__item">
             <a class="social__link" href="#">
-              <svg class="social__link-img">
+              <svg class="social__link-img social__link-img--menu">
                 <use xlink:href="images/sprite.svg#instagram"></use>
               </svg>
             </a>
@@ -160,8 +74,9 @@
         </ul>
       </div>
     </address>
-    <ul class="menu__list">
-      <div class="menu__container">
+
+    <div class="menu__container">
+      <ul class="menu__list">
         <li class="menu__list-item">
           <a class="menu__list-link" href="#">Доставка</a>
         </li>
@@ -186,10 +101,10 @@
         <li class="menu__list-item">
           <a class="menu__list-link" href="#">Публичная оферта</a>
         </li>
-      </div>
-    </ul>
-
+      </ul>
+    </div>
   </div>
+
   <div class="header__top">
     <div class="container">
       <div class="header__wrapper header__wrapper--top">
@@ -202,6 +117,7 @@
               <span class="header__link-text">адрес и время доставки</span>
             </a>
           </li>
+
           <li class="header__links-item">
             <a class="header__link header__link--tel" href="#">
               <svg class="header__link-img">
@@ -210,14 +126,14 @@
               <span class="header__link-text">горячая линия 24/7</span>
             </a>
           </li>
-
         </ul>
+
         <nav class="header__nav">
+          <span class="sr-only">открыть меню</span>
           <button class="header__burger" type="button">
-            <svg class="header__burger-img" width="30" height="20">
-              <use xlink:href="images/sprite.svg#burger"></use>
-            </svg>
+            <div class="header__burger-img"></div>
           </button>
+
           <ul class="header__list">
             <li class="header__item">
               <a class="header__link" href="#">доставка</a>
@@ -237,58 +153,68 @@
   <div class="header__bottom">
     <div class="container">
       <div class="header__wrapper header__wrapper--bottom">
-        <a class="logo" href="#">
-          <img class="logo__img logo__img--header" src="images/sprite/logo.svg" alt="Логотип">
-          <img class="logo__img--l" src="images/sprite/logo-l.svg" alt="Логотип">
-        </a>
+      <picture class="logo">
+        <source class="logo__img--l" srcset="images/sprite/logo-l.svg" media="(max-width: 1200px)">
+        <img class="logo__img logo__img--header" src="images/sprite/logo.svg" alt="Логотип">
+      </picture>
+
         <button class="header__catalog" type="button">
+          <svg class="header__catalog-list">
+            <use xlink:href="images/sprite.svg#catalog"></use>
+          </svg>
+
           Каталог <span class="header__catalog--none">продуктов</span>
-          <ul class="catalog">
-            <li class="catalog__item">
-              <a class="catalog__link" href="#">Овощи и фрукты</a>
+
+          <svg class="header__catalog-arrows">
+            <use xlink:href="images/sprite.svg#catalog__arrow"></use>
+          </svg>
+
+          <ul class="list">
+            <li class="list__item">
+              <a class="list__link" href="#">Овощи и фрукты</a>
             </li>
-            <li class="catalog__item">
-              <a class="catalog__link" href="#">Бакалея</a>
+            <li class="list__item">
+              <a class="list__link" href="#">Бакалея</a>
             </li>
-            <li class="catalog__item">
-              <a class="catalog__link" href="#">Молочные продукты</a>
+            <li class="list__item">
+              <a class="list__link" href="#">Молочные продукты</a>
             </li>
-            <li class="catalog__item">
-              <a class="catalog__link" href="#">Хлеб</a>
+            <li class="list__item">
+              <a class="list__link" href="#">Хлеб</a>
             </li>
-            <li class="catalog__item">
-              <a class="catalog__link" href="#">Мясо</a>
+            <li class="list__item">
+              <a class="list__link" href="#">Мясо</a>
             </li>
-            <li class="catalog__item">
-              <a class="catalog__link" href="#">Колбаса</a>
+            <li class="list__item">
+              <a class="list__link" href="#">Колбаса</a>
             </li>
-            <li class="catalog__item">
-              <a class="catalog__link" href="#">Рыба</a>
+            <li class="list__item">
+              <a class="list__link" href="#">Рыба</a>
             </li>
-            <li class="catalog__item">
-              <a class="catalog__link" href="#">Алкоголь</a>
+            <li class="list__item">
+              <a class="list__link" href="#">Алкоголь</a>
             </li>
-            <li class="catalog__item">
-              <a class="catalog__link" href="#">Напитки</a>
+            <li class="list__item">
+              <a class="list__link" href="#">Напитки</a>
             </li>
-            <li class="catalog__item">
-              <a class="catalog__link" href="#">Торты</a>
+            <li class="list__item">
+              <a class="list__link" href="#">Торты</a>
             </li>
-            <li class="catalog__item">
-              <a class="catalog__link" href="#">Мясо</a>
+            <li class="list__item">
+              <a class="list__link" href="#">Мясо</a>
             </li>
-            <li class="catalog__item">
-              <a class="catalog__link" href="#">Чай, кофе</a>
+            <li class="list__item">
+              <a class="list__link" href="#">Чай, кофе</a>
             </li>
           </ul>
         </button>
+
         <form class="search">
           <label class="sr-only" for="search">Найти в магазине</label>
           <input class="search__input" id="search" type="search" name="search" placeholder="Найти в магазине ..."
             required>
           <button class="search__btn" type="submit">поиск</button>
         </form>
-
 
         <ul class="user">
           <li class="user__item user__item--search">
@@ -298,35 +224,36 @@
               </svg>
             </button>
           </li>
+
           <li class="user__item user__item--user">
             <a class="user__link" href="#">
               <span class="sr-only">профиль</span>
-              <svg class="user__img">
+              <svg class="user__img user__img--user">
                 <use xlink:href="images/sprite.svg#user"></use>
               </svg>
             </a>
           </li>
+
           <li class="user__item user__item--heart">
             <a class="user__link" href="#">
               <span class="user__num">12</span>
               <span class="sr-only">избранные товары</span>
-              <svg class="user__img">
+              <svg class="user__img user__img--heart">
                 <use xlink:href="images/sprite.svg#heart"></use>
               </svg>
             </a>
           </li>
+
           <li class="user__item">
             <button class="user__link user__link--cart" type="button">
               <span class="user__num">12</span>
               <span class="sr-only">корзина</span>
-              <svg class="user__img">
+              <svg class="user__img user__img--cart">
                 <use xlink:href="images/sprite.svg#cart"></use>
               </svg>
             </button>
           </li>
-
         </ul>
-
       </div>
     </div>
   </div>
