--- a/app/scss/components/_advantages.scss
+++ b/app/scss/components/_advantages.scss
@@ -8,6 +8,15 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    @include xl {
+      padding-bottom: 0;
+      justify-content: space-around;
+    }
+
+    @include md {
+      padding: 25px 0 0 0;
+      display: block;
+    }
   }
 
   &__item {
@@ -43,6 +52,14 @@
         @include bg(url('../images/sprite/support.svg'));
       }
     }
+
+    @include xl{
+      margin-bottom: 40px;
+    }
+
+    @include md {
+      margin: 0 0 25px 10px;
+    }
   }
 
   &__title {
@@ -55,18 +72,5 @@
 
   &__text {
     @include Lato(400);
-  }
-}
-
-@media (max-width:670px) {
-  .advantages {
-    &__items {
-      padding: 25px 0 0 0;
-      display: block;
-    }
-
-    &__item {
-      margin: 0 0 25px 10px;
-    }
   }
 }
