--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -13,7 +13,9 @@
       padding: 17px 0;
       color: $white;
       text-transform: uppercase;
-      
+      @include md {
+        flex-flow: row-reverse;
+      }
     }
 
     &--bottom { 
@@ -23,6 +25,37 @@
 
   &__burger {
     display: none;
+    width: 30px;
+    height: 20px;
+    @include md {
+      display: block;
+    }
+  }
+
+  &__burger-img {
+    width: 30px;
+    height: 2px;
+    background-color: $white;
+    position: relative;
+    &::after {
+      content: '';
+      position: absolute;
+      top: 10px;
+      left: 0;
+      width: 30px;
+      height: 2px;
+      background-color: $white;
+    }
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: -10px;
+      left: 0;
+      width: 30px;
+      height: 2px;
+      background-color: $white;
+    }
   }
 
   &__links {
@@ -45,21 +78,41 @@
       bottom: 0;
     }
 
+    &--address {
+      padding-left: 45px;
+    }
+
     &--tel {
-      margin-left: 48px;
+      padding-left: 45px;
+      margin-left: 52px;
+      @include lg {
+        margin-left: 18px;
+      }
     }
   }
 
   &__link-img {
-    margin: 0 5px -2px 0;
+    position: absolute;
+    top: -4px;
+    left: 0;
     width: 32px;
     height: 22px;
+    fill: $white;
+  }
+
+  &__link-text {
+    @include md {
+      display: none;
+    }
   }
 
   &__list {
     display: flex;
     justify-content: space-between;
-    align-items: center
+    align-items: center;
+    @include md {
+      display: none;
+    }
   }
 
   &__item {
@@ -81,28 +134,51 @@
     min-width: 234px;
     position: relative;
     margin: 0 20px;
-  
-    &::after {
-      content: '';
-      position: absolute;
-      top: 50%;
-      right: 23px;
-      transform: translateY(-50%);
-      width: 8px;
-      height: 4px;
-      @include bg(url('../images/sprite/catalog__arrow.svg'));
+    outline: transparent;
+    transition: all 0.3s linear;
+    &:focus,
+    &:hover,
+    &:active {
+      background-color: $green-200;
+      .header__catalog-arrows {
+        transform: rotateX(180deg);
+      }
     }
 
-    &::before {
-      content: '';
+    @include xl {
+      margin-right: 10px
+    }
+    @include md {
+      margin: 0;
+    }
+    @include sm {
+      min-width: 0;
+    }
+
+    &--none {
+      @include sm {
+        display: none;
+      }
+    }
+  }
+
+  &__catalog-list {
       position: absolute;
       top: 50%;
       left: 13px;
       transform: translateY(-50%);
       width: 25px;
       height: 19px;
-      @include bg(url('../images/sprite/catalog.svg'));
+      fill: $green-900;
     }
+
+  &__catalog-arrows {
+    position: absolute;
+    top: 50%;
+    right: 23px;
+    width: 8px;
+    height: 4px;
+    fill: $green-900;
   }
 
   &__catalog-img {
@@ -112,7 +188,7 @@
     }
 }
 
-.catalog {
+.list {
   display: none;
   position: absolute;
   top: 50px;
@@ -123,22 +199,30 @@
   text-align: left;
   border: 1px solid $silver-200;
   border-radius: 0px 0px 6px 6px;
+  transition: display 0.3s linear;
+  //работает
   :not(:last-child) {
-        border-bottom: 1px solid $silver-200;
+        border-bottom: 3px solid $silver-200;
       }
-
-		&__item {
-      color: $dark;
-      transition: all 2s;
-      :hover {
-        color: $green-900;
-        border-left: 3px solid $green-900;
-      }
-		}
+  // не работает
+  // &:not(:last-child) {
+  //       border-bottom: 3px solid $silver-200;
+  //     }
+  @include xl {
+    overflow: auto;
+    max-height: 400px;
+  }
 
 		&__link {
       display: block;
       padding: 10px 24px;
+      color: $dark;
+      transition: all 0.3s linear;
+      border-left: 3px solid transparent;
+      &:hover {
+        color: $green-900;
+        border-left: 3px solid $green-900;
+      }
 		}
 
     &--active {
@@ -150,6 +234,12 @@
   display: flex;
   position: relative;
   width: 45%;
+  @include xl {
+    margin-right: 10px;
+  }
+  @include lg {
+    display: none;
+  }
   &::after {
     content: '';
     position: absolute;
@@ -161,6 +251,18 @@
     background-image: url('../images/sprite/search.svg');
   }
 
+  &--active {
+    @include lg {
+      display: flex;
+      position: absolute;
+      width: 100%;
+      top: 153px;
+      left: 0;
+      border: 1px solid $dark-500;
+      z-index: 2;
+    }
+  }
+
   &__input {
     display: flex;
     align-items: center;
@@ -168,9 +270,10 @@
     width: 100%;
     border-radius: 6px 0 0 6px;
     padding: 16px 10px 15px 53px;
-  }
-
-  &__input {
+    outline: transparent;
+    @include lg {
+      border-radius: 0px;
+    }
     &::placeholder{
       @include Lato(400);
       color: $dark-800;
@@ -185,7 +288,11 @@
     width: 158px;
     @include Lato(600);
     color: $white;
+    outline: transparent;
     transition: all 0.3s;
+    @include lg {
+      border-radius: 0px;
+    }
     &:hover {
       background-color: rgba(49, 53, 43, 0.85);
     }
@@ -200,159 +307,7 @@
   }
 }
 
-.cart {
-  display: none;
-  max-width: 475px;
-  width: 100%;
-  height: 100vh;
-  background-color: $white;
-  position: absolute;
-  right: 0;
-  top: 0;
-  z-index: 3;
 
-  &--active {
-    display: block;
-  }
-
-  &__wrapper {
-    // display: flex;
-    // flex-direction: column;
-  }
-
-  &__top {
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  &__title {
-    font-size: 24px;
-    line-height: 1.2;
-    color: $dark;
-  }
-
-  &__clear {
-    @include Lato(300);
-    color: $dark;
-    line-height: 1.2;
-  }
-
-  &__body {
-    padding: 13px 11px;
-    background-color: $silver-100;
-    // flex: 1 0 auto;
-    height: calc(100vh - 213px);
-  }
-
-  &__bottom-wrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 25px;
-  }
-
-  &__bottom-text {
-    font-size: 24px;
-    line-height: 1.2;
-    color: $dark;
-  }
-
-  &__sum {
-    font-size: 20px;
-    line-height: 1;
-    color: $dark-500;
-    @include Lato(600);
-    span {
-      font-size: 15px;
-    }
-  }
-
-  &__buy {
-    width: 100%;
-    margin: 0 auto;
-    display: block;
-    text-align: center;
-    padding: 22.5px 0;
-    background-color: $green-900;
-    color: $white;
-    font-size: 18px;
-    line-height: 1.3;
-  }
-}
-
-.cart-list {
-  background-color: $white;
-  display: flex;
-  justify-content: space-between;
-  border: 1px solid $silver-600;
-  border-radius: 3px;
-  padding: 12px;
-  margin-bottom: 12px;
-
-		&__item {
-      display: flex;
-      align-items: center;
-      margin-bottom: 12px;
-		}
-
-		&__img-box {
-      max-width: 60px;
-      height: 60px;
-      margin-right: 32px;
-		}
-
-		&__img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-		}
-
-		&__title {
-      max-width: 133px;
-      width: 100%;
-      display: block;
-      color: $dark-900;
-      @include Lato(600);
-      margin-bottom: 5px;
-		}
-
-		&__price {
-      display: block;
-      span {
-        font-size: 12px;
-      }
-		}
-
-    &__box {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-end;
-    }
-
-		&__del {
-      margin-bottom: 10px;
-		}
-
-		&__footer {
-      display: flex;
-      align-items: center;
-		}
-
-		&__counter {
-      background-color: rgba(99, 166, 14, 0.1);
-      margin-right: 12px;
-		}
-
-    &__amount {
-      padding: 5px 14px;
-    }
-
-    &__btn {
-      background-color: $green-900;
-      padding: 4px 6px;
-    }
-}
 
 .menu {
   display: none;
@@ -365,6 +320,7 @@
   z-index: 5;
   &--active {
     display: block;
+    box-shadow: 0 0 0 9999px rgba(0,0,0, 0.5);
   }
 
 		&__container {
@@ -424,7 +380,7 @@
 		}
 
 		&__catalog-link {
-      margin-left: 50px;
+      padding-left: 50px;
       color: $dark-800;
       font-size: 18px;
       line-height: 1;
@@ -434,7 +390,7 @@
         content: '';
         position: absolute;
         top: 3px;
-        left: -45px;
+        left: 7px;
         background-image: url('../images/sprite/catalog.svg');
         width: 25px;
         height: 19px;
@@ -458,33 +414,34 @@
 
 		&__link--tel {
       position: relative;
-      &::after {
-        content: '';
-        position: absolute;
-        top: 3px;
-        left: -45px;
-        background-image: url('../images/sprite/tel.svg');
-        width: 23px;
-        height: 23px;
-      }
 		}
 
 		&__link--address {
       position: relative;
-      &::after {
-        content: '';
-        position: absolute;
-        top: 3px;
-        left: -45px;
-        background-image: url('../images/sprite/address.svg');
-        width: 24px;
+		}
+
+    &__img {
+      position: absolute;
+      left: -45px;
+      top: 0;
+      width: 24px;
+
+      &--tel {
+        height: 25px;
+      }
+
+      &--address {
         height: 33px;
       }
-		}
+    }
+
+
 
 		&__list {
       padding: 24px 0;
       background-color: $white;
+      overflow: auto;
+      max-height: 400px;
 		}
 
 		&__list-item {
@@ -508,28 +465,56 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 50px;
-    height: 50px;
     border-radius: 6px;
     position: relative;
+    outline: transparent;
+    transition: all 0.3s linear;
     
     &:not(:last-child) {
       margin-right: 12px;
     }
 
-    &:hover {
+    &:hover,
+    &:active,
+    &:focus {
       background-color: $silver-600;
     }
 
     &--search {
       display: none;
+      @include lg {
+        display: flex;
+      }
     }
+
+    &--user,
+    &--heart {
+      @include md {
+        display: none;
+      }
+    }
+  }
+
+  &__link {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   &__img {
     width: 32px;
-    height: 28px;
+    height: 30px;
     object-fit: cover;
+    fill: $white;
+    &--user {
+      height: 32px;
+    }
+
+    &--heart {
+      height: 28px;
+    }
   }
 
   &__num {
@@ -547,101 +532,10 @@
   }
 }
 
-@media (max-width: 1200px) {
-  .logo {
-    margin-right: 10px;
-    &__img--header {
-      display: none;
-    }
-
-    &__img--l {
-      display: block;
-    }
-  }
-
-  .header {
-    &__catalog {
-      margin-right: 10px;
-    }
-  }
-
-  .search {
-    margin-right: 10px;
-  }
-}
-
-@media (max-width: 870px) {
-  .header {
-    &__link {
-      &--tel {
-        margin-left: 18px;
-      }
-    }
-  }
-  .search {
-    display: none;
-    &--active {
-      display: flex;
-      position: absolute;
-      width: 100%;
-      top: 153px;
-      left: 0;
-      border: 1px solid $dark-500;
-      z-index: 2;
-    }
-     &__btn,
-      &__input {
-        border-radius: 0px;
-      }
-  }
-
-  .user {
-    &__item {
-      &--search {
-        display: flex;
-      }
-    }
-  }
-}
-
-@media (max-width: 670px) {
-  .header {
-    &__list {
-      display: none;
-    }
-
-    &__burger {
-    display: block;
-  }
-
-    &__wrapper--top {
-      flex-flow: row-reverse;
-    }
-
-    &__link-text {
-      display: none;
-    }
-
-    &__catalog {
-      margin: 0;
-    }
-  }
-
-  .user {
-    &__item--user,
-    &__item--heart {
-      display: none;
-    }
-  }
-}
-
-@media (max-width: 430px) {
-  .header {
-    &__catalog {
-      min-width: 0;
-      &--none {
-        display: none;
-      }
+.social {
+  &__link-img {
+    &--menu {
+      fill: $dark-800;
     }
   }
 }
