--- a/app/scss/components/_main-slider.scss
+++ b/app/scss/components/_main-slider.scss
@@ -11,6 +11,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+
+    @include xl {
+      height: 400px;
+    }
+
+    @include md {
+      height: 350px;
+    }
   }
 
   &__box {
@@ -20,6 +28,10 @@
     margin-bottom: 30px;
     padding: 24px;
     max-width: 885px;
+
+    @include xl {
+      margin: 0 auto 20px;
+    }
   }
   
   &__title {
@@ -27,6 +39,19 @@
     font-size: 60px;
     line-height: 1.3;
     margin-bottom: 15px;
+    @include lc(3);
+
+    @include xl {
+      font-size: 55px;
+    }
+
+    @include lg {
+      font-size: 43px;
+    }
+
+    @include md {
+      font-size: 30px;
+    }
   }
 
   &__span {
@@ -37,6 +62,11 @@
   &__text {
     @include Lato(400);
     font-size: 16px;
+    @include lc(3);
+
+    @include lg {
+      font-size: 14px;
+    }
   }
 
   &__btn {
@@ -45,6 +75,10 @@
     font-size: 18px;
     @include Lato(400);
     padding: 12px 24px;
+
+    @include xl {
+      margin: 0 auto;
+    }
   }
 
   &__arrow {
@@ -63,10 +97,14 @@
     top: 49%;
     transform: translateY(-50%);
     z-index: 1;
+    transition: background-color 0.3s linear;
+    &:hover {
+      background-color: $green-900;
+    }
   }
 
   .slick-prev {
-    left: 10px;
+    left: 60px;
   }
 
   .slick-next {
@@ -77,6 +115,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 10px 0 20px;
 
     li:not(:last-child) {
       margin-right: 10px;
@@ -91,95 +130,11 @@
       padding: 0;
       border: 1px solid $silver-600;
     }
-  }
 
-  .slick-active {
+    .slick-active {
     button {
       background-color: $green-900;
-      border-color: $green-900;
     }
   }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 1200px) {
-  .main-slider {
-    &__title {
-      font-size: 55px;
-    }
-    &__wrapper {
-      height: 400px;
-    }
-  }
-
-  
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 870px) {
-  .main-slider {
-    &__title {
-      font-size: 43px;
-    }
-
-    &__text {
-      font-size: 14px;
-    }
-  }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 670px) {
-  .main-slider {
-    &__title {
-      font-size: 30px;
-    }
-    &__wrapper {
-      height: 300px;
-    }
   }
 }
