--- a/app/scss/components/_news.scss
+++ b/app/scss/components/_news.scss
@@ -2,11 +2,16 @@
   font-size: 18px;
   @include Lato(600);
   color: $dark-900;
+
   &__header {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
     margin-bottom: 15px;
+    @include md {
+      display: block;
+      margin-bottom: 20px;
+    }
   }
 
   &__header-link {
@@ -18,23 +23,46 @@
     }
   }
 
+  &__title {
+    @include md {
+      margin-bottom: 30px;
+    }
+  }
+
   &__items {
     display: flex;
     justify-content: space-between;
     align-items: stretch;
     margin-bottom: 75px;
+    @include lg {
+      margin-bottom: 30px;
+    }
+    
+    @include md {
+      flex-wrap: wrap;
+      justify-content: center;
+    }
   }
 
   &__item {
     margin: 0 10px;
+    @include md {
+      margin-bottom: 15px;
+    }
   }
 
   &__box {
-    max-height: 351px;
+    display: flex;
+    flex-direction: column;
     height: 100%;
     box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
     border-radius: 6px;
     position: relative;
+    transition: color 0.3s linear;
+    cursor: pointer;
+    &:hover  {
+      color: $green-900;
+    }
   }
 
   &__date {
@@ -58,46 +86,24 @@
     @include Signika(600);
     display: block;
   }
+
+  &__img-box {
+    max-width: 410px;
+    max-height: 240px;
+  }
   
   &__img {
     margin-bottom: 18px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
   &__text {
     max-width: 410px;
     width: 100%;
-    padding: 0 18px 18px 18px;
-    
-  }
-}
-
-@media (max-width: 870px) {
-  .news {
-    &__items {
-      margin-bottom: 30px;
-    }
-  }
-}
-
-@media (max-width: 670px) {
-  .news {
-
-    &__header {
-      display: block;
-      margin-bottom: 20px;
-    }
-
-    &__title {
-      margin-bottom: 30px;
-    }
-
-    &__items {
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-
-    &__item {
-      margin-bottom: 15px;
-    }
+    padding: 0 18px 0 18px;
+    margin-bottom: 18px;
+    @include lc(3);
   }
 }
