--- a/app/scss/components/_top-products.scss
+++ b/app/scss/components/_top-products.scss
@@ -1,23 +1,53 @@
 .products {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   flex-wrap: wrap;
-  margin-bottom: 20px;
+  margin: 0 -15px 20px;
+
+  @include lg {
+    margin-bottom: 15px;
+  }
 
   &__item {
-    margin-bottom: 30px;
+    margin: 0 15px 30px;
+
+    @include md {
+      margin-bottom: 20px;
+    }
+
+    @include sm {
+      margin-bottom: 10px;
+    }
   }
 }
 
 .top-products {
   padding: 72px 0;
   text-align: center;
+
+  @include lg {
+    padding: 30px 0;
+  }
+
   &__title {
     text-align: center;
     margin-bottom: 30px;
   }
   &__link {
     margin-bottom: 72px;
+    border-radius: 6px;
+    color: $green-900;
+    outline: transparent;
+    @include lg {
+      margin-bottom: 30px;
+    }
+    
+    &:hover {
+      background-color: $green-100;
+    }
+    &:active {
+      opacity: 0.5;
+    }
   }
 }
 
@@ -31,6 +61,19 @@
   max-width: 300px;
   text-align: left;
   transition: border-color 0.3s linear;
+  min-height: 409px;
+  cursor: pointer;
+
+  @include lg {
+    min-height: 380px;
+  }
+
+  @include md {
+    min-height: 180px;
+  }
+  
+  &:hover,
+  &:active,
   &:hover {
     border-color: $green-900;
   }
@@ -51,9 +94,11 @@
 
   &__favorit {
     fill: $silver-600;
-    transition: fill 0.2s linear;
+    transition: fill 0.3s linear;
 
-    &:hover {
+    &:hover,
+    &:active,
+    &:focus {
       fill: $yellow;
     }
   }
@@ -73,6 +118,7 @@
     font-weight: 600;
     margin-bottom: auto;
     padding: 12px 18px 0;
+    @include lc(3);
   }
 
   &__inner {
@@ -104,15 +150,49 @@
       transform: rotate(346deg);
     }
   }
+
+  &__btn {
+    padding: 8px 8px 4px;
+    &:active {
+      .product-card__icon {
+        fill: rgba(255, 255, 255, 0.5);
+      }
+    }
+  }
+
+
+  &__icon {
+    fill: $white;
+    width: 16px;
+    height: 16px; 
+  }
 } 
 
-.filter {
+.categories-menu {
     display: flex;
     justify-content: center;
     margin: 0 auto 45px;
+
+    @include lg {
+      flex-wrap: wrap;
+      margin-bottom: 30px;
+    }
+
+    @include sm {
+      margin-bottom: 0;
+    }
+
       &__item {
+        @include lg {
+          margin-bottom: 15px;
+        }
+
         &:not(:last-child) {
           margin-right: 27px;
+
+          @include lg {
+            margin-right: 15px;
+          }
         }
       }
 
@@ -121,148 +201,17 @@
         @include Lato(700);
         text-transform: uppercase;
         font-size: 17px;
+        outline: transparent;
         border-bottom: 3px solid transparent;
         transition: border-bottom-color 0.3s;
-        &:hover {
+        &:hover,
+        &:active,
+        &:focus {
           border-bottom: 3px solid $green-200;
         }
       }
 
   .mixitup-control-active {
     border-bottom: 3px solid $green-200;
-  }
-}
-
-.banners {
-  display: grid;
-  text-align: left;
-  grid-template-columns: 2fr 1fr 1fr;
-  grid-column-gap: 30px;
-		&__item {
-      min-height: 300px;
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: cover;
-      padding: 76px 86px 76px 32px;
-      &--white {
-        color: $white;
-      }
-		}
-
-		&__subtitle {
-      text-transform: uppercase;
-      @include Lato(700);
-      font-size: 12px;
-      line-height: 1;
-      letter-spacing: 0.1em;
-      margin-bottom: 18px;
-		}
-
-		&__title {
-      margin-top: 14px;
-      display: block;
-      @include Signika(600);
-      font-size: 30px;
-      line-height: 1.4;
-      text-transform: uppercase;
-      margin-bottom: 12px;
-		}
-
-		&__link {
-      @include Lato(700);
-      text-transform: uppercase;
-      line-height: 1; 
-      padding-bottom: 6px;
-      border-bottom: 2px solid $dark-500;
-      transition: all 0.3s;
-      &:hover {
-        color: $white;
-        border-bottom-color: $white;
-      }
-      &--white {
-        border-bottom-color: $white;
-        &:hover {
-          color: $dark-500;
-          border-bottom-color: $dark-500;
-      }
-      }
-		}
-}
-
-@media (max-width: 1200px) {
-  .banners {
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 30px;
-
-    &__item {
-      padding: 60px 50px 50px 20px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: flex-start;
-    }
-  }
-}
-
-@media (max-width: 870px) {
-  .products {
-    margin-bottom: 0;
-  }
-  .top-products{
-    padding: 30px 0;
-
-    &__link {
-      margin-bottom: 30px;
-    }
-  }
-
-  .banners {
-    grid-template-columns: 1fr;
-  }
-
-  .filter {
-    flex-wrap: wrap;
-    margin-bottom: 30px;
-    
-      &__item {
-        margin-bottom: 15px;
-        &:not(:last-child) {
-          margin-right: 10px;
-        }
-      }
-  }
-}
-
-@media (max-width: 670px) {
-  .products {
-    &__item {
-      margin-bottom: 20px;
-    }
-  }
-  
-  .product-card {
-    max-width: 200px;
-  }
-}
-
-@media (max-width: 430px) {
-  .banners {
-    &__item {
-      padding: 35px 20px 35px 20px;
-    }
-  }
-
-  .products {
-    &__item {
-      margin-bottom: 10px;
-    }
-  }
-
-  .product-card {
-    max-width: 170px;
-  }
-
-  .filter {
-    margin-bottom: 0;
   }
 }
